new: replaced koa with express and implemented GET /sensors/:sensorId/measured-values
