# backend/src/modules/sensor/measured-values.dto.ts
@@ -1,0 +1,6 @@
+import {PhysicalQuantityDto} from './physical-quantity.dto.ts';
+
+export type MeasuredValuesDto = {
+  sensorId: string;
+  values: PhysicalQuantityDto[]
+}
